add 'signupType' param to email confirmation link
